--- a/assets/index.less
+++ b/assets/index.less
@@ -1,13 +1,12 @@
 @stepsPrefixClass: ~"rc-steps";
 @stepDescriptionMaxWidth: 100px;
-
 @primary-color: #108ee9;
 @process-icon-color: @primary-color;
 @process-title-color: rgba(0,0,0,.65);
 @process-description-color: @process-title-color;
 @process-tail-color: #e9e9e9;
 @wait-icon-color: #ccc;
-@wait-title-color: #999;
+@wait-title-color: gba(0,0,0,.43);
 @wait-description-color: @wait-title-color;
 @wait-tail-color: @process-tail-color;
 @finish-icon-color: @process-icon-color;
@@ -29,176 +28,31 @@
   * {
     box-sizing: border-box;
   }
+}
 
-  &-item {
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    flex: 1;
-    overflow: hidden;
+.@{stepsPrefixClass}-item {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  flex: 1;
+  overflow: hidden;
 
-    &:last-child {
-      flex: none;
-    }
-
-    &:last-child &-tail,
-    &:last-child &-content-title:after {
-      display: none;
-    }
-
-    &-icon,
-    &-content {
-      display: inline-block;
-    }
-
-    &-content {
-      margin-top: 3px;
-      &-title {
-        font-size: 14px;
-        margin-bottom: 4px;
-        color: #666;
-        font-weight: bold;
-        display: inline-block;
-        padding-right: 10px;
-        position: relative;
-        &:after {
-          content: '';
-          height: 1px;
-          width: 1000px;
-          background: @wait-tail-color;
-          display: block;
-          position: absolute;
-          top: 0.55em;
-          left: 100%;
-        }
-      }
-      &-description {
-        font-size: 12px;
-        color: #999;
-      }
-    }
-
-    &-wait {
-      .@{stepsPrefixClass}-item-icon {
-        border-color: @wait-icon-color;
-        background-color: #fff;
-        > .@{stepsPrefixClass}-icon {
-          color: @wait-icon-color;
-          .@{stepsPrefixClass}-icon-dot {
-            background: @wait-icon-color;
-          }
-        }
-      }
-      .@{stepsPrefixClass}-title {
-        color: @wait-title-color;
-      }
-      .@{stepsPrefixClass}-description {
-        color: @wait-description-color;
-      }
-      .@{stepsPrefixClass}-tail:after {
-        background-color: @wait-tail-color;
-      }
-    }
-
-    &.@{stepsPrefixClass}-status-process {
-      .@{stepsPrefixClass}-item-icon-inner {
-        border-color: @process-icon-color;
-        background-color: @process-icon-color;
-        > .@{stepsPrefixClass}-icon {
-          color: #fff;
-          .@{stepsPrefixClass}-icon-dot {
-            background: @process-icon-color;
-          }
-        }
-      }
-      .@{stepsPrefixClass}-title {
-        color: @process-title-color;
-      }
-      .@{stepsPrefixClass}-description {
-        color: @process-description-color;
-      }
-      .@{stepsPrefixClass}-tail:after {
-        background-color: @process-tail-color;
-      }
-    }
-    &.@{stepsPrefixClass}-status-finish {
-      .@{stepsPrefixClass}-item-icon-inner {
-        border-color: @finish-icon-color;
-        background-color: #fff;
-        > .@{stepsPrefixClass}-icon {
-          color: @finish-icon-color;
-          .@{stepsPrefixClass}-icon-dot {
-            background: @finish-icon-color;
-          }
-        }
-      }
-      .@{stepsPrefixClass}-tail:after {
-        background-color: @finish-tail-color;
-      }
-      .@{stepsPrefixClass}-title {
-        color: @finish-title-color;
-      }
-      .@{stepsPrefixClass}-description {
-        color: @finish-description-color;
-      }
-    }
-
-    &.@{stepsPrefixClass}-status-error {
-      .@{stepsPrefixClass}-item-icon-inner {
-        border-color: @error-icon-color;
-        background-color: #fff;
-        > .@{stepsPrefixClass}-icon {
-          color: @error-icon-color;
-          .@{stepsPrefixClass}-icon-dot {
-            background: @error-icon-color;
-          }
-        }
-      }
-      .@{stepsPrefixClass}-tail:after {
-        background-color: @error-tail-color;
-      }
-      .@{stepsPrefixClass}-title {
-        color: @error-title-color;
-      }
-      .@{stepsPrefixClass}-description {
-        color: @error-description-color;
-      }
-    }
-
-    &.@{stepsPrefixClass}-next-error {
-      .@{stepsPrefixClass}-tail:after {
-        background-color: @error-icon-color;
-      }
-    }
-
-    &.@{stepsPrefixClass}-custom {
-      .@{stepsPrefixClass}-item-icon-inner {
-        background: none;
-        border: 0;
-        width: auto;
-        height: auto;
-        > .@{stepsPrefixClass}-icon {
-          font-size: 20px;
-          top: 2px;
-          width: 20px;
-          height: 20px;
-        }
-      }
-      &.@{stepsPrefixClass}-status-process {
-        .@{stepsPrefixClass}-item-icon-inner > .@{stepsPrefixClass}-icon {
-          color: @process-icon-color;
-        }
-      }
-    }
+  &:last-child {
+    flex: none;
   }
 
-  .@{stepsPrefixClass}-item-icon, .@{stepsPrefixClass}-item-content {
-    position: relative;
+  &:last-child &-tail,
+  &:last-child &-title:after {
+    display: none;
+  }
+
+  &-icon,
+  &-content {
     display: inline-block;
     vertical-align: top;
   }
 
-  &-item-icon {
+  &-icon {
     border: 1px solid @wait-icon-color;
     width: 26px;
     height: 26px;
@@ -223,7 +77,7 @@
     }
   }
 
-  .@{stepsPrefixClass}-tail {
+  &-tail {
     position: absolute;
     left: 0;
     width: 100%;
@@ -239,119 +93,49 @@
       transition: background .3s;
     }
   }
-
-  &.@{stepsPrefixClass}-small {
-    .@{stepsPrefixClass}-item-icon-inner {
-      border: 1px solid @wait-icon-color;
-      width: 18px;
-      height: 18px;
-      line-height: 18px;
-      text-align: center;
-      border-radius: 18px;
-      font-size: 12px;
-      margin-right: 10px;
-      > .@{stepsPrefixClass}-icon.rcicon {
-        font-size: 12px;
-        font-size: ~"9px \9"; // ie8-9
-        transform: scale(.75);
-        top: -1px;
-      }
-    }
-    .@{stepsPrefixClass}-item-content {
-      margin-top: 0;
-    }
-    .@{stepsPrefixClass}-title {
-      font-size: 12px;
-      margin-bottom: 4px;
-      color: #666;
-      font-weight: bold;
-    }
-    .@{stepsPrefixClass}-description {
-      font-size: 12px;
-      color: #999;
-    }
-    .@{stepsPrefixClass}-tail {
-      top: 8px;
-      padding: 0 8px;
-      &:after {
-        height: 1px;
-        border-radius: 1px;
-        width: 100%;
-      }
-    }
+  &-content {
+    margin-top: 3px;
   }
-
-  &.@{stepsPrefixClass}-small .@{stepsPrefixClass}-item.@{stepsPrefixClass}-custom .@{stepsPrefixClass}-item-icon-inner, .@{stepsPrefixClass}-item.@{stepsPrefixClass}-custom .@{stepsPrefixClass}-item-icon-inner {
-    width: inherit;
-    height: inherit;
-    line-height: inherit;
-    border-radius: 0;
-    border: 0;
-    background: none;
-  }
-}
-
-.@{stepsPrefixClass}-vertical {
-  display: block;
-  .@{stepsPrefixClass}-item {
-    display: block;
-    overflow: visible;
-  }
-
-  .@{stepsPrefixClass}-tail {
-    position: absolute;
-    left: 13px;
-    top: 0;
-    height: 100%;
-    width: 1px;
-    padding: 30px 0 4px 0;
+  &-title {
+    font-size: 14px;
+    margin-bottom: 4px;
+    color: #666;
+    font-weight: bold;
+    display: inline-block;
+    padding-right: 10px;
+    position: relative;
     &:after {
-      height: 100%;
-      width: 1px;
+      content: '';
+      height: 1px;
+      width: 1000px;
+      background: @wait-tail-color;
+      display: block;
+      position: absolute;
+      top: 0.55em;
+      left: 100%;
     }
   }
-
-  .@{stepsPrefixClass}-item-icon {
-    float: left;
-    &-inner {
-      margin-right: 16px;
+  &-description {
+    font-size: 12px;
+    color: #999;
+  }
+  .step-item-status(wait);
+  .step-item-status(process);
+  &-process &-icon {
+    background: @process-icon-color;
+    > .@{stepsPrefixClass}-icon {
+      color: #fff;
     }
   }
+  .step-item-status(finish);
+  .step-item-status(error);
 
-  .@{stepsPrefixClass}-item-content {
-    min-height: 47px;
-    overflow: hidden;
-    display: block;
-    .@{stepsPrefixClass}-title {
-      line-height: 26px;
-      &:after {
-        display: none;
-      }
-    }
-    .@{stepsPrefixClass}-description {
-      padding-bottom: 12px;
-    }
-  }
-}
-
-.@{stepsPrefixClass}-vertical.@{stepsPrefixClass}-small {
-  .@{stepsPrefixClass}-tail {
-    position: absolute;
-    left: 9px;
-    top: 0;
-    padding: 22px 0 4px 0;
-    &:after {
-      height: 100%;
-      width: 1px;
-    }
-  }
-
-  .@{stepsPrefixClass}-title {
-    line-height: 18px;
+  &.@{stepsPrefixClass}-next-error .@{stepsPrefixClass}-item-title:after {
+    background: @error-icon-color;
   }
 }
 
-.@{stepsPrefixClass}-horizontal {
+.@{stepsPrefixClass}-horizontal:not(.@{stepsPrefixClass}-label-vertical) {
   .@{stepsPrefixClass}-item {
     margin-right: 10px;
     &:last-child {
@@ -360,111 +144,43 @@
     &-tail {
       display: none;
     }
-    &-content-description {
+    &-description {
       max-width: @stepDescriptionMaxWidth;
     }
   }
 }
 
-.@{stepsPrefixClass}-label-vertical {
-  .@{stepsPrefixClass}-tail {
-    padding: 0 32px;
-    margin-left: 22px;
-  }
-  .@{stepsPrefixClass}-item {
-    .@{stepsPrefixClass}-step {
-      display: inline-block;
-      text-align: center;
-      width: @stepDescriptionMaxWidth;
-    }
-  }
-  .@{stepsPrefixClass}-item:not(:first-child) .@{stepsPrefixClass}-item-icon {
-    margin-left: 0;
-    padding-left: 0;
-  }
-  .@{stepsPrefixClass}-item-icon {
-    display: inline-block;
-    padding-right: 10px;
-    &-inner {
-      margin: 0 auto;
-    }
-  }
-  .@{stepsPrefixClass}-item-content {
-    display: block;
-    margin-top: 10px;
-    .@{stepsPrefixClass}-title {
-      padding-right: 0;
-    }
-    .@{stepsPrefixClass}-description {
-      text-align: left;
-    }
-  }
-}
-
-.@{stepsPrefixClass}-dot {
-  .@{stepsPrefixClass}-tail {
-    width: 100%;
-    top: 1px;
-    margin: 0 0 0 @stepDescriptionMaxWidth / 2;
-    padding: 0;
-
-    &:after {
-      height: 3px;
-    }
-  }
-  .@{stepsPrefixClass}-item-icon {
-    padding-right: 0;
-    &-inner {
-      width: 5px;
-      height: 5px;
-      line-height: 5px;
-      border: 0;
-
+.step-item-status(@status) {
+  @icon-color: "@{status}-icon-color";
+  @title-color: "@{status}-title-color";
+  @description-color: "@{status}-description-color";
+  @tail-color: "@{status}-tail-color";
+  &-@{status} &-icon {
+    border-color: @@icon-color;
+    background-color: #fff;
+    > .@{stepsPrefixClass}-icon {
+      color: @@icon-color;
       .@{stepsPrefixClass}-icon-dot {
-        float: left;
-        width: 100%;
-        height: 100%;
-        border-radius: 2.5px;
+        background: @@icon-color;
       }
     }
   }
-  .@{stepsPrefixClass}-status-process {
-    .@{stepsPrefixClass}-item-icon {
-      top: -1px;
-      &-inner {
-        width: 7px;
-        height: 7px;
-        line-height: 7px;
-
-        .@{stepsPrefixClass}-icon-dot {
-          border-radius: 3.5px;
-        }
-      }
+  &-@{status} &-title {
+    color: @@title-color;
+    &:after {
+      background-color: @@tail-color;
     }
   }
-  &.@{stepsPrefixClass}-vertical {
-    .@{stepsPrefixClass}-tail {
-      left: 2px;
-      height: 100%;
-      padding: 0;
-      top: 15px;
-      &:after {
-        height: 100%;
-        width: 3px;
-      }
-    }
-    .@{stepsPrefixClass}-item-icon {
-      top: 12px;
-      left: 1px;
-    }
-    .@{stepsPrefixClass}-status-process {
-      .@{stepsPrefixClass}-item-icon {
-        left: 0;
-      }
-    }
+  &-@{status} &-description {
+    color: @@description-color;
+  }
+  &-@{status} &-tail:after {
+    background-color: @@tail-color;
   }
 }
 
-.hidden {
-  display: none;
-}
+@import 'custom-icon';
+@import 'small';
+@import 'vertical';
+@import 'label-placement';
+@import 'progress-dot';
