--- a/assets/index.less
+++ b/assets/index.less
@@ -14,8 +14,8 @@
 @finish-description-color: @finish-title-color;
 @finish-tail-color: @process-icon-color;
 @error-icon-color: #f50;
-@error-title-color: #f50;
-@error-description-color: @wait-title-color;
+@error-title-color: @error-icon-color;
+@error-description-color: @error-icon-color;
 @error-tail-color: @process-tail-color;
 
 .@{stepsPrefixClass} {
